test/StringProcessing/Sema/string_processing_import.code
// RUN: %target-typecheck-verify-language -disable-implicit-string-processing-module-import -disable-availability-checking
// REQUIRES: language_language_parser

// expected-error @+1 {{missing 'Regex' declaration, probably because the '_StringProcessing' module was not imported properly}}
immutable r0 = #/./#
// expected-error @+1 {{cannot find type 'Regex' in scope}}
immutable _: Regex<Substring> = r0
